fix: udpate scrollbar height

--- a/src/reset.css
+++ b/src/reset.css
@@ -7,7 +7,7 @@ body {
 }
 
 .scrollbar::-webkit-scrollbar {
-  height: 10px;
+  height: 6px;
 }
 
 ::-webkit-scrollbar {
